--- a/Sistema Bancario/SistemaBancario/SistemaBancario.csproj
+++ b/Sistema Bancario/SistemaBancario/SistemaBancario.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\Exceptions\" />
+  </ItemGroup>
+
 </Project>
